--- a/nginx.conf
+++ b/nginx.conf
@@ -15,14 +15,10 @@ http {
   server {
     listen 80;
 
-      location /paint-board {
-        alias /usr/share/nginx/html/dist;
+      location / {
+        root /usr/share/nginx/html/dist;
         try_files $uri $uri/ /index.html;
         index  index.html;
-      }
-
-      location / {
-        return 301 $scheme://$http_host/paint-board/;
       }
   }
 }
